<resources>
    <string name="app_name">TE Ambassador</string>

    <!-- Login -->
    <string name="loginWelcomeBack">Welcome Back,</string>
    <string name="logIn">Log In!</string>
    <string name="loginEmail">Email</string>i
    <string name="loginPassword">Password</string>
    <string name="loginContinue">Continue</string>
    <string name="loginForgotPassword">Forgot Password?</string>
    <string name="loginSignUpJump">New Member? Please SignUp</string>

    <!-- ForgotPassword -->
    <string name="forgotPasswordEmail">Enter Email</string>
    <string name="forgotPasswordButton">Reset Password</string>

    //signUp
    <string name="signUpPhone">Phone Number</string>
    <string name="signUpName">Name</string>
    <string name="signUpEmail">Email</string>
    <string name="signUpPassword">Password</string>
    <string name="signUpDob">DD/MM/YYYY</string>
    <string name="signUpButton">Sign Up</string>
    <string name="signUpLoginJump">Already a member? Please Login</string>
    <string name="signUpHello">Hello,</string>
    <string name="signUpSign">Sign Up!</string>

    //OTP
    <string name="otpNumber">We have sent OTP to +91 9891179000</string>
    <string name="otpResend">Resend Code</string>
    <string name="otpVerifyButton">Verify</string>

    <!-- NavigationActivity -->
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navigationLogOut">Logout</string>

    <!--NavigationMenu-->
    <string name="menu_home">Home</string>
    <string name="menu_payment">Payment</string>

    <!--HomeFragment -->
    <string name="homeTextViewHey">Hey,</string>
    <string name="homeTextViewName">User Name!</string>
    <string name="homeTextViewProgressBarRemaining">Remaining</string>
    <string name="homeTextViewProgressBarCompleted">Completed</string>
    <string name="homeTextViewLevel">Level</string>
    <string name="homeTextViewWork">Work Allotment</string>

    <!--Task-->
    <string name="taskDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu urna et risus feugiat semper. Sed ornare massa ut nisl mattis, sit amet luctus odio blandit. Vivamus tincidunt quam a porttitor elementum. Quisque pellentesque massa ante. Nam ligula sem, finibus id mi et, mattis rhoncus elit. Aenean ante mauris, interdum nec velit in, lobortis dignissim mauris. Praesent vulputate sem diam, non fermentum turpis consectetur nec. Vestibulum volutpat placerat lectus eu gravida.</string>
    <string name="taskTitle">Null</string>
    <string name="taskPoints">Null</string>
    <string name="taskStatus">Pending for approval</string>
    <string name="statusTitle">Status</string>
    <string name="uploadTitle">Upload Your Work</string>
    <string name="uploadButton">Select an image</string>
    <string name="progressBarMessage1">Yet to Upload</string>
    <string name="progressBarMessage2">Pending for Approval</string>
    <string name="progressBarMessage3">Rejected</string>
    <string name="progressBarMessage4">Completed</string>
    <string name="alertTitle">Upload Image?</string>
    <string name="alertMessage">Are you sure you want to upload the selected image?</string>
    <string name="positiveButton">Yes</string>
    <string name="negativeButton">No</string>
</resources>
