<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp">

    <LinearLayout
        android:id="@+id/signUpLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="170dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/signUpPhone"
            app:boxStrokeColor="@color/colorOutline"
            android:textColorHint="@color/colorOutline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpPhoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/signUpName"
            app:boxStrokeColor="@color/colorOutline"
            android:textColorHint="@color/colorOutline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:hint="@string/signUpEmail"
            android:textColorHint="@color/colorOutline"
            app:boxStrokeColor="@color/colorOutline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/signUpPassword"
            app:boxStrokeColor="@color/colorOutline"
            android:textColorHint="@color/colorOutline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/signUpDob"
            app:boxStrokeColor="@color/colorOutline"
            android:textColorHint="@color/colorOutline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpDobEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUpButton"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:background="@drawable/signup_button_shape"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:fontFamily="@font/proxima_nova_bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/signUpLoginJump"
            android:fontFamily="@font/proxima_nova_regular"
            android:textSize="15sp"
            android:textAlignment="center"
            android:onClick="loginActivity"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/signUpImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="170dp"
        app:layout_constraintBottom_toTopOf="@+id/signUpLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/blob" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="40dp"
        android:text="@string/signUpSign"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:fontFamily="@font/proxima_nova_bold"
        app:layout_constraintBottom_toBottomOf="@+id/signUpImageView"
        app:layout_constraintEnd_toEndOf="@+id/signUpImageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="@string/signUpHello"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/textView3"
        app:layout_constraintEnd_toEndOf="@id/signUpImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>